bir suru sey eklendi